--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
    <li><a href="Jame's Horde Leveling Guide - Chapter III (41-51) _ World of Warcraft Pro.html" target="_blank">Jame's Horde Guide - Chapter III [40-51]</a></li>
    <li><a href="Jame's Horde Leveling Guide - Chapter IV (51-60) _ World of Warcraft Pro.html" target="_blank">Jame's Horde Guide - Chapter IV [51-60]</a></li>
    <li><a href="http://alex5tigr.github.io/" target="_blank">Русский гайд</a></li>
-   <li><a href="https://docviewer.yandex.ua/?url=ya-disk%3A%2F%2F%2Fdisk%2FJames%20Leveling%20guide%20(horde).zip&name=James%20Leveling%20guide%20(horde).zip&c=56ebc17573db" target="_blank">Скачать гайд (English)</a></li>
+   <li><a href="https://yadi.sk/d/tfynyhCZqHbNj" target="_blank">Скачать гайд (English)</a></li>
    <li><a href="O saite.html" target="_blank">О сайте</a></li>
    
 <body>
